--- a/Models/SpeechLM/Interaction/2022.03.30_dGSLM.md
+++ b/Models/SpeechLM/Interaction/2022.03.30_dGSLM.md
@@ -29,28 +29,64 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We introduce ***dGSLM***, the first "textless" model able to generate audio samples of naturalistic spoken dialogues.
 It uses recent work on unsupervised spoken unit discovery coupled with a dual-tower transformer architecture with cross-attention trained on 2000 hours of two-channel raw conversational audio (Fisher dataset) without any text or labels.
 We show that our model is able to generate speech, laughter and other paralinguistic signals in the two channels simultaneously and reproduces more naturalistic and fluid turn-taking compared to a text-based cascaded model.
 
-</details>
-<br>
+</td><td>
 
 我们介绍 ***dGSLM***, 这是首个能够生成自然流畅的口语对话音频的"无文本"模型.
 它使用了近期在无监督口语单元发现的工作, 耦合了具有交叉注意力的双塔 Transformer 架构, 在 2000 小时的双通道原始对话音频 (Fisher 数据集) 上进行训练, 无需任何文本或标签.
 我们展示了我们的模型能够同时生成两个通道的语音, 笑声和其他副语言信号, 并比基于文本的级联模型产生更自然和流畅的轮流对话.
 
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
