--- a/Models/SpeechLM/Interaction/2023.05.18_SpeechGPT.md
+++ b/Models/SpeechLM/Interaction/2023.05.18_SpeechGPT.md
@@ -25,8 +25,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Multi-modal large language models are regarded as a crucial step towards Artificial General Intelligence (AGI) and have garnered significant interest with the emergence of ChatGPT.
 However, current speech-language models typically adopt the cascade paradigm, preventing inter-modal knowledge transfer.
