--- a/Models/SpeechLM/Interaction/2023.05.24_Spectron.md
+++ b/Models/SpeechLM/Interaction/2023.05.24_Spectron.md
@@ -28,8 +28,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 We present ***Spectron***, a novel approach to adapting pre-trained large language models (LLMs) to perform spoken question answering (QA) and speech continuation.
 By endowing the LLM with a pre-trained speech encoder, our model becomes able to take speech inputs and generate speech outputs.
