--- a/Models/SpeechLM/Interaction/2023.12.23_ParalinGPT.md
+++ b/Models/SpeechLM/Interaction/2023.12.23_ParalinGPT.md
@@ -12,8 +12,8 @@
   - [Github]
   - [Demo]
 - 文件:
-  - [ArXiv](_PDF/2312.15316v2__ParalinGPT__Paralinguistics-Enhanced_Large_Language_Modeling_of_Spoken_Dialogue.pdf)
-  - [Publication](_PDF/2312.15316p0__ParalinGPT__ICASSP2024.pdf)
+  - [ArXiv](../PDF/2312.15316v2__ParalinGPT__Paralinguistics-Enhanced_Large_Language_Modeling_of_Spoken_Dialogue.pdf)
+  - [Publication](../PDF/2312.15316p0__ParalinGPT__ICASSP2024.pdf)
 
 </details>
 
