--- a/Models/SpeechLM/Interaction/2024.05.14_SpeechVerse.md
+++ b/Models/SpeechLM/Interaction/2024.05.14_SpeechVerse.md
@@ -27,7 +27,7 @@
   - [Github]
   - [Demo]
 - 文件:
-  - [ArXiv](_PDF/2405.08295v2__SpeechVerse__A_Large-scale_Generalizable_Audio_Language_Model.pdf)
+  - [ArXiv](../PDF/2405.08295v2__SpeechVerse__A_Large-scale_Generalizable_Audio_Language_Model.pdf)
   - [Publication] #TODO
 
 </details>
