--- a/Models/SpeechLM/Interaction/2024.08.09_VITA.md
+++ b/Models/SpeechLM/Interaction/2024.08.09_VITA.md
@@ -27,7 +27,7 @@
   - [Github](https://github.com/VITA-MLLM/VITA)
   - [Demo](https://vita-home.github.io/)
 - 文件:
-  - [ArXiv](_PDF/2408.05211v2__VITA__Towards_Open-Source_Interactive_Omni_Multimodal_LLM.pdf)
+  - [ArXiv](../PDF/2408.05211v2__VITA__Towards_Open-Source_Interactive_Omni_Multimodal_LLM.pdf)
   - [Publication] #TODO
 
 </details>
