--- a/Models/SpeechLM/Interaction/2024.08.27_Mini-Omni.md
+++ b/Models/SpeechLM/Interaction/2024.08.27_Mini-Omni.md
@@ -34,7 +34,7 @@ To our best knowledge, ***Mini-Omni*** is the first fully end-to-end, open-sourc
 ## 1·Introduction: 引言
 
 Recent developments in large language models have progressed rapidly, with models becoming increasingly powerful, such as off-the-shelf [Llama 3.1](../TextLM/2024.07.31_LLaMA3.md), [Mixtral](../TextLM/Mixtral.md), [Qwen-2](../TextLM/Qwen2.md), and the well-known GPT-4.
-As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by [LLaVA](../CV/LLaVA.md), [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) and [Video-llama](../CV/Video-LLaMA.md).
+As an extension of their capabilities, language models are beginning to master understanding other modalities, exemplified by [LLaVA](../CV/LLaVA.md), [Qwen2-Audio](../SpeechLM/ST2T/2024.07.15_Qwen2-Audio.md15_Qwen2-Audio.md) and [Video-llama](../CV/2023.06.05_Video-LLaMA.md).
 Despite their strength in specific tasks, a significant gap remains that hinders further integration of large language models into daily application: real-time voice interaction capability.
 [GPT-4o](2024.09.06_GPT-4o.md), introduced by OpenAI, is the first model to feature real-time multimodal speech interaction capabilities.
 It can understand and engage with vision, audio, and text while enabling real-time speech conversations, although it remains closed-source.
@@ -95,8 +95,8 @@ This dataset, synthesized using GPT-4o, can be used to fine-tune models to devel
 
 Recently, researchers have been increasingly focused on advancing unified models for cross-modal understanding.
 These approaches typically employ a well-pretrained neural network as the encoder for relevant modalities, using a lightweight adapter to align the encoder's output with the text input of language model.
-Classical works such as [LLaVA](../CV/LLaVA.md), [Flamingo](../CV/Flamingo.md) and [BLIP](../_Basis/BLIP.md) are used for visual understanding, while in the audio domain, models like [Whisper](../SpeechLM/2022.12.06_Whisper.md) and [Beats](../SpeechRepresentation/2022.12.18_BEATs.md) are commonly utilized as encoders for semantic and acoustic features.
-In Llama 3.1, Whisper is employed, while [SpeechVerse](2024.05.14_SpeechVerse.md) leverages [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [SALMONN](../SpokenDialogue/2023.10.20_SALMONN.md), combine Whisper and Beats to extract features.
+Classical works such as [LLaVA](../CV/LLaVA.md), [Flamingo](../CV/2022.04.29_Flamingo.md) and [BLIP](../_Basis/BLIP.md) are used for visual understanding, while in the audio domain, models like **Whisper** and [Beats](../SpeechRepresentation/2022.12.18_BEATs.md) are commonly utilized as encoders for semantic and acoustic features.
+In Llama 3.1, **Whisper** is employed, while [SpeechVerse](2024.05.14_SpeechVerse.md) leverages [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md); [SALMONN](../SpokenDialogue/2023.10.20_SALMONN.md), combine **Whisper** and Beats to extract features.
 Such works are often constrained to producing output in the text modality.
 
 ### Audio Language Modeling
@@ -104,7 +104,7 @@ Such works are often constrained to producing output in the text modality.
 Recently, an increasing number of studies have employed audio tokenization to bridge the gap between audio and text.
 Audio tokenization converts continuous audio signals into discrete audio tokens, enabling large language models to perform inference and even cross-modal interactions.
 As a result, a variety of speech-text tasks, such as ASR, TTS, music understanding and generation, and sound editing, can be accomplished.
-[Mega-TTS](../SpeechLM/2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md), [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md), and [Voicebox](../SpeechLM/2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
+[Mega-TTS](../SpeechLM/2023.06.06_Mega-TTS.md) utilized audio codecs for speech synthesis, while efforts like [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md), [SPEAR-TTS](../SpeechLM/ST2S/2023.02.07_SPEAR-TTS.mdTS.md), and [Voicebox](../SpeechLM/2023.06.23_VoiceBox.md) have further explored optimizations in decoding methods and conditioning techniques, employing Diffusion as the converter from tokens to audio.
 
 ### Real-Time Human-Machine Interaction Models
 
@@ -113,7 +113,7 @@ However, the technical implementations remain proprietary.
 Models with real-time interaction capabilities are currently scarce.
 [SpeechGPT](../SpokenDialogue/2023.05.18_SpeechGPT.md) is an early end-to-end speech interaction model; however, it still suffers from latency due to the Audio-Text-Text-Audio (A-T-T-A) process, similar to [Spectron](../SpokenDialogue/2023.05.24_Spectron.md).
 [LauraGPT](2023.10.07_LauraGPT.md) also employs a similar approach but not for voice conversation scenario.
-[VITA](../SpokenDialogue/2024.08.09_VITA.md), [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) are two models that support voice input, but they output text and rely on external TTS systems for speech synthesis. ***Mini-Omni*** is a fully end-to-end speech-to-speech conversational model.
+[VITA](../SpokenDialogue/2024.08.09_VITA.md), [Qwen2-Audio](../SpeechLM/ST2T/2024.07.15_Qwen2-Audio.md15_Qwen2-Audio.md) are two models that support voice input, but they output text and rely on external TTS systems for speech synthesis. ***Mini-Omni*** is a fully end-to-end speech-to-speech conversational model.
 Through our exploration, we have identified the biggest challenge in advancing this field: the logical inconsistency in reasoning when only the audio modality is present, which we will address in the following chapter.
 
 ## 3·Methodology: 方法
@@ -184,7 +184,7 @@ This is achieved firstly due to the strong performance of our base model, and se
 #### Audio Encoding
 
 The audio input primarily focuses on feature extraction from the input audio, with options including Hubert or a separately pretrained audio encoder.
-Given our focus on speech input, [Whisper](2022.12.06_Whisper.md) and [Qwen2-Audio](2024.07.15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
+Given our focus on speech input, **Whisper** and [Qwen2-Audio](../SpeechLM/ST2T/2024.07.15_Qwen2-Audio.md15_Qwen2-Audio.md) also demonstrate effective performance for general audio tasks.
 For audio output, selecting audio tokens with a multi-codebook approach better captures audio details.
 We experimented with flattening for audio token modeling, but it resulted in excessively long tokens, which are detrimental to streaming and lead to unstable learning.
 Instead, parallel decoding, inspired by [MusicGen](2023.06.08_MusicGen.md), employs a delay pattern combined with text conditions, as illustrated in Figure 2.
@@ -212,7 +212,7 @@ Since the primary modality alignment tasks are handled during adapter training, 
 Given the eight parallel output sequences, the input also requires eight sequences, leading to significant complexity.
 Therefore, we briefly outline the organization of model inputs here.
 The model can accept either text or audio inputs, which are placed in the corresponding modality sequences.
-For audio inputs, the input tokens and Whisper features are transformed into tensors of the same dimension via adapters and then concatenated.
+For audio inputs, the input tokens and **Whisper** features are transformed into tensors of the same dimension via adapters and then concatenated.
 Depending on the task, we place the `<answer>` special token in different positions to guide the model's output, achieving multi-modal output.
 The organization of some tasks is illustrated in Figure 4.
 Before being fed into the model, all sequences are summed and averaged to integrate features.
@@ -241,7 +241,7 @@ Final stage training includes annealing and fine-tuning with Voice QA.
 Our model is trained on 8 A100 GPUs, utilizing a cosine annealing learning rate scheduler with a minimum learning rate of 4e-6 and a maximum learning rate of 4e-4.
 Each training epoch consists of 40,000 steps, with batch size 192 for each step.
 The base language model employs [Qwen2-0.5B](../TextLM/Qwen2.md), a transformer architecture with 24 blocks and an internal dimension of 896.
-The speech encoder uses the Whisper-small encoder, with ASR adapter connected via two-layer MLP, and the TTS adapter extends the original model by adding 6 additional transformer blocks.
+The speech encoder uses the **Whisper**-small encoder, with ASR adapter connected via two-layer MLP, and the TTS adapter extends the original model by adding 6 additional transformer blocks.
 During fine-tuning, we use learn rate from 4e-6 to 5e-5.
 
 ## 5·Results: 结果
@@ -251,7 +251,7 @@ During fine-tuning, we use learn rate from 4e-6 to 5e-5.
 We first evaluated the model's performance on ASR tasks to assess its speech understanding capabilities.
 Basic experiments on speech recognition capabilities were conducted using the four test sets from [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md): test-clean, test-other, dev-clean, and dev-other.
 Results are presented in Table 2, where we compare the accuracy of our adopted speech recognition systems, [wav2vec2](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) and Whisper-small, as well as the [VITA](../SpokenDialogue/2024.08.09_VITA.md).
-The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind [Whisper](2022.12.06_Whisper.md)-small’s decoder, it still achieves an excellent level of audio comprehension.
+The findings indicate that while Mini-Omni's speech recognition performance slightly lags behind **Whisper**-small’s decoder, it still achieves an excellent level of audio comprehension.
 
 ### Case Study
 
