--- a/Models/SpeechLM/Interaction/2024.10.20_Ichigo.md
+++ b/Models/SpeechLM/Interaction/2024.10.20_Ichigo.md
@@ -14,7 +14,7 @@
   - [Github](https://github.com/homebrewltd/ichigo)
   - [Demo](https://demo.homebrew.ltd/)
 - 文件:
-  - [ArXiv](../SpeechLM/_PDF/2410.15316v1__Ichigo__Mixed-Modal_Early-Fusion_Realtime_Voice_Assistant.pdf)
+  - [ArXiv](../_PDF/2410.15316v1__Ichigo__Mixed-Modal_Early-Fusion_Realtime_Voice_Assistant.pdf)
   - [Publication] #TODO
 
 </details>
