--- a/Models/SpeechLM/Interaction/2024.11.01_Freeze-Omni.md
+++ b/Models/SpeechLM/Interaction/2024.11.01_Freeze-Omni.md
@@ -18,7 +18,7 @@
   - [Github](https://github.com/VITA-MLLM/Freeze-Omni)
   - [Demo](https://freeze-omni.github.io)
 - 文件:
-  - [ArXiv](_PDF/2411.00774v1__Freeze-Omni__A_Smart_and_Low_Latency_Speech-to-Speech_Dialogue_Model_with_Frozen_LLM.pdf)
+  - [ArXiv](../PDF/2411.00774v1__Freeze-Omni__A_Smart_and_Low_Latency_Speech-to-Speech_Dialogue_Model_with_Frozen_LLM.pdf)
   - [Publication] #TODO
 
 </details>
