--- a/Models/SpeechLM/Interaction/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/Interaction/2025.01.20_MinMo.md
@@ -978,12 +978,12 @@ In the future, a fully end-to-end duplex model will be explored.
 [^01]: [**GPT-4o**](2024.09.06_GPT-4o.md)
 [^02]: [**Moshi**](2024.09.17_Moshi.md)
 [^03]: [**GLM-4-Voice**](2024.12.03_GLM-4-Voice.md)
-[^04]: [**GPT-3**](../TextLM/2020.05.28_GPT-3.md)
+[^04]: [**GPT-3**](../../TextLM/2020.05.28_GPT-3.md)
 [^05]: [Freeze-Omni](2024.11.01_Freeze-Omni.md)
 [^06]: [**LLaMA-Omni**](2024.09.10_LLaMA-Omni.md)
-[^07]: **Qwen2-Audio**
+[^07]: [**Qwen2-Audio**](../ST2T/2024.07.15_Qwen2-Audio.md)
 [^08]: [SALMONN](2023.10.20_SALMONN.md)
-[^09]: [WavChat](../../Surveys/2024.11.15_WavChat_60P/Main.md)
+[^09]: [WavChat](../../../Surveys/2024.11.15_WavChat_60P/Main.md)
 [^10]: [PSLM](2024.06.18_PSLM.md)
 [^11]: [Mini-Omni](2024.08.27_Mini-Omni.md)
 [^12]: [**VITA**](2024.08.09_VITA.md)
@@ -995,18 +995,18 @@ In the future, a fully end-to-end duplex model will be explored.
 [^18]: [Omni-Flatten](2024.10.23_OmniFlatten.md)
 [^19]: [Mini-Omni2](2024.10.15_Mini-Omni2.md)
 [^20]: [ParalinGPT](2023.12.23_ParalinGPT.md)
-[^21]: [E-Chat](../SpeechLM/ST2T/2023.12.31_E-chat.md)
+[^21]: [E-Chat](../ST2T/2023.12.31_E-chat.md)
 [^22]: [Spoken-LLM](2024.02.20_Spoken-LLM.md)
-[^23]: [Salle (TextrolSpeech)](../../Datasets/2023.08.28_TextrolSpeech.md)
-[^24]: [PromptTTS](../Acoustic/2022.11.22_PromptTTS.md)
-[^25]: [PromptTTS2](../Acoustic/2023.09.05_PromptTTS2.md)
-[^26]: [InstructTTS](../Acoustic/2023.01.31_InstructTTS.md)
-[^27]: [ControlSpeech](../SpeechLM/2024.06.03_ControlSpeech.md)
-[^28]: [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)
-[^29]: [Qwen2.5](../TextLM/2024.12.19_Qwen2.5.md)
-[^30]: [CosyVoice 2](../SpeechLM/2024.12.13_CosyVoice2.md)
-[^31]: [Alpaca](../../Datasets/Alpaca.md)
-[^32]: [CosyVoice](../SpeechLM/2024.07.07_CosyVoice.md)
+[^23]: [Salle (TextrolSpeech)](../../../Datasets/2023.08.28_TextrolSpeech.md)
+[^24]: [PromptTTS](../../Acoustic/2022.11.22_PromptTTS.md)
+[^25]: [PromptTTS2](../../Acoustic/2023.09.05_PromptTTS2.md)
+[^26]: [InstructTTS](../../Acoustic/2023.01.31_InstructTTS.md)
+[^27]: [ControlSpeech](../2024.06.03_ControlSpeech.md)
+[^28]: [FunAudioLLM](../2024.07.04_FunAudioLLM.md)
+[^29]: [Qwen2.5](../../TextLM/2024.12.19_Qwen2.5.md)
+[^30]: [CosyVoice 2](../ST2S/2024.12.13_CosyVoice2.md)
+[^31]: [Alpaca](../../../Datasets/Alpaca.md)
+[^32]: [CosyVoice](../ST2S/2024.07.07_CosyVoice.md)
 [^33]: **Alimeeting** yu2022m2met
 [^34]: **Fisher** cieri2004fisher
 [^35]: **MOSS** sun2024moss
