--- a/Models/SpeechLM/Interaction/2023.04.25_AudioGPT.md
+++ b/Models/SpeechLM/Interaction/2023.04.25_AudioGPT.md
@@ -24,15 +24,14 @@
   - [Github](https://github.com/AIGC-Audio/AudioGPT)
   - [Demo](https://aigc-audio.github.io/AudioGPT.github.io/)
 - 文件:
-  - [ArXiv](_PDF/2304.12995v1__AudioGPT__Understanding_and_Generating_Speech_Music_Sound_and_Talking_Head.pdf)
-  - [Publication](_PDF/2304.12995p0__AudioGPT__AAAI2024.pdf)
+  - [ArXiv](../PDF/2304.12995v1__AudioGPT__Understanding_and_Generating_Speech_Music_Sound_and_Talking_Head.pdf)
+  - [Publication](../PDF/2304.12995p0__AudioGPT__AAAI2024.pdf)
 
 </details>
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Large language models (LLMs) have exhibited remarkable capabilities across a variety of domains and tasks, challenging our understanding of learning and cognition.
 Despite the recent success, current LLMs are not capable of processing complex audio information or conducting spoken conversations (like Siri or Alexa).
@@ -41,8 +40,7 @@ With an increasing demand to evaluate multi-modal LLMs of human intention unders
 Experimental results demonstrate the capabilities of ***AudioGPT*** in solving AI tasks with speech, music, sound, and talking head understanding and generation in multi-round dialogues, which empower humans to create rich and diverse audio content with unprecedented ease.
 Our system is publicly available at [this https URL](https://github.com/AIGC-Audio/AudioGPT).
 
-</details>
-<br>
+</td><td>
 
 大语言模型在各种领域和任务中显示了显著的能力, 挑战了我们对学习和认知的理解.
 尽管最近取得了不少成功, 现有的大语言模型并不能处理复杂的音频信息或进行口语对话 (如 Siri 或 Alexa).
@@ -54,6 +52,8 @@ Our system is publicly available at [this https URL](https://github.com/AIGC-Aud
 随着对评估多模态大语言模型在人类意图理解和与基础模型合作方面的需求不断增加, 我们概述了原则和流程, 并在一致性、能力和健壮性方面测试了 ***AudioGPT***.
 实验结果表明了 ***AudioGPT*** 在解决多轮对话中与语音, 音乐, 声音和讲话头部理解和生成的能力, 为人类提供了创造丰富, 多样化的音频内容提供了前所未有的便利.
 我们的系统已公开可用, 位于 [https://github.com/AIGC-Audio/AudioGPT](https://github.com/AIGC-Audio/AudioGPT).
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
