--- a/Models/SpeechLM/ST2S/2023.03.06_FoundationTTS.md
+++ b/Models/SpeechLM/ST2S/2023.03.06_FoundationTTS.md
@@ -18,7 +18,7 @@
   - [Github]
   - [Demo]
 - 文件:
-  - [ArXiv](_PDF/2303.02939v3__FoundationTTS__Text-to-Speech_for_ASR_Customization_with_Generative_Language_Model.pdf)
+  - [ArXiv](../_PDF/2303.02939v3__FoundationTTS__Text-to-Speech_for_ASR_Customization_with_Generative_Language_Model.pdf)
   - [Publication] #TODO
 
 </details>
