--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -59,10 +59,6 @@ Models at each of the two-stage pipelines have been developed independently.
 第二阶段是根据中间表示生成原始波形 (**WaveNet**[^02]; **WaveRNN**[^03]).
 每个阶段的模型都单独建立.
 
-[^01]: [**Tacotron2**: Natural TTS Synthesis by Conditioning WaveNet on Mel Spectrogram Predictions.](../Acoustic/2017.12.16_Tacotron2.md) ICASSP2018.
-[^02]: [**WaveNet**: A Generative Model for Raw Audio.](../Vocoder/2016.09.12_WaveNet.md) ArXiv2016.
-[^03]: [**WaveRNN**: Efficient Neural Audio Synthesis.](../Vocoder/2018.02.23_WaveRNN.md) ICML2018.
-
 </td></tr>
 <tr><td>
 
@@ -72,17 +68,6 @@ In the text-to-spectrogram generation step, extracting attention maps from pre-t
 More recently, likelihood-based methods further eliminate the dependency on external aligners by estimating or learning alignments that maximize the likelihood of target mel-spectrograms (**AlignTTS**[^07]; **Flow-TTS**[^08]; **Glow-TTS**[^09]).
 Meanwhile, **Generative Adversarial Networks (GANs)**[^10] have been explored in second stage models.
 GAN-based feed-forward networks with multiple discriminators, each distinguishing samples at different scales or periods, achieve high-quality raw waveform synthesis (**MelGAN**[^11]; **GAN-TTS**[^12]; **HiFi-GAN**[^13]).
-
-[^04]: [**TransformerTTS**: Neural Speech Synthesis With Transformer Network.](../Acoustic/2018.09.19_TransformerTTS.md) AAAI2019.
-[^05]: [**FastSpeech**: Fast, Robust and Controllable Text to Speech.](../Acoustic/2019.05.22_FastSpeech.md)
-[^06]: [**ParaNet**: Non-Autoregressive Neural Text-to-Speech.](../Acoustic/2019.05.21_ParaNet.md) ICML2020.
-[^07]: [**AlignTTS**: Efficient Feed-Forward Text-to-Speech System without Explicit Alignment.](../Acoustic/2020.03.04_AlignTTS.md) ICASSP2020.
-[^08]: [**Flow-TTS**: A Non-Autoregressive Network for Text to Speech Based on Flow.](../Acoustic/2020.04.09_Flow-TTS.md) ICASSP2020.
-[^09]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search.](../Acoustic/2020.05.22_Glow-TTS.md) NeurIPS2020.
-[^10]: [**GAN**: Generative Adversarial Nets.](../_Basis/2014.06.10_GAN.md) NeurIPS2014.
-[^11]: [**MelGAN**: MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis.](../Vocoder/2019.10.08_MelGAN.md) NeurIPS2019.
-[^12]: [**GAN-TTS**: High Fidelity Speech Synthesis with Adversarial Networks.](../Vocoder/2019.09.25_GAN-TTS.md) ICLR2019.
-[^13]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis.](../Vocoder/2020.10.12_HiFi-GAN.md) NeurIPS2020.
 
 </td><td>
 
@@ -101,10 +86,6 @@ In addition, their dependency on predefined intermediate features precludes appl
 Recently, several works, i.e., **FastSpeech2s**[^15] and **EATS**[^16], have proposed efficient end-to-end training methods such as training over short audio clips rather than entire waveforms, leveraging a mel-spectrogram decoder to aid text representation learning, and designing a specialized spectrogram loss to relax length-mismatch between target and generated speech.
 However, despite potentially improving performance by utilizing the learned representations, their synthesis quality lags behind two-stage systems.
 
-[^14]: [**Wave-Tacotron**: Spectrogram-Free End-to-End Text-to-Speech Synthesis.](../_tmp/Wave-Tacotron.md) ArXiv2020.
-[^15]: [**FastSpeech2**: Fast and High-Quality End-to-End Text to Speech](../Acoustic/2020.06.08_FastSpeech2.md) ICLR2021.
-[^16]: [**EATS**: End-to-end Adversarial Text-to-Speech.](2020.06.05_EATS.md) ICLR2021.
-
 </td><td>
 
 尽管并行文本转语音系统取得了进展, 但两阶段方案仍然存在问题. 因为它们要求顺序训练或微调以获取高质量结果 (**Tacotron2**[^01]; **Wave-Tacotron**[^14]), 即后一阶段的模型需要在前一阶段模型的生成样本上进行训练.
@@ -121,8 +102,6 @@ To improve the expressive power of our method so that high-quality speech wavefo
 In addition to generating fine-grained audio, it is important for TTS systems to express the one-to-many relationship in which text input can be spoken in multiple ways with different variations (e.g., pitch and duration).
 To tackle the one-to-many problem, we also propose a stochastic duration predictor to synthesize speech with diverse rhythms from input text.
 With the uncertainty modeling over latent variables and the stochastic duration predictor, our method captures speech variations that cannot be represented by text.
-
-[^17]: [**VAE**: Auto-Encoding Variational Bayes.](../_Basis/VAE.md) ICLR2014.
 
 </td><td>
 
@@ -157,8 +136,6 @@ We make both our [demo page](https://jaywalnut310.github.io/vits-demo/index.html
 Currently, neural TTS models with a two-stage pipeline can synthesize human-like speech (**WaveNet**[^02]; **DeepVoice3**[^18]; **Tacotron2**[^01]).
 However, they typically require vocoders trained or fine-tuned with first stage model output, which causes training and deployment inefficiency.
 They are also unable to reap the potential benefits of an end-to-end approach that can use learned hidden representations rather than predefined intermediate features.
-
-[^18]: [**DeepVoice3**: 2000-Speaker Neural Text-to-Speech.](../Acoustic/2017.10.20_DeepVoice3.md) ICLR2018.
 
 </td><td>
 
@@ -220,14 +197,6 @@ Unlike the previous works that applied VAEs to first stage models, we adopt a VA
 [^23], [^24] and [^25] improve VAE performance by enhancing the expressive power of prior and posterior distribution with normalizing flows.
 To improve the representation power of the prior distribution, we add normalizing flows to our conditional prior network, leading to the generation of more realistic samples.
 
-[^19]: [**GMVAE-Tacotron**: Hierarchical Generative Modeling for Controllable Speech Synthesis.](../Acoustic/2018.10.16_GMVAE-Tacotron.md) ICLR2019.
-[^20]: Learning Latent Representations for Style Control and Transfer in End-to-End Speech Synthesis. ICASSP2019.
-[^21]: [**BVAE-TTS**: Bidirectional Variational Inference for Non-Autoregressive Text-to-Speech.](../Acoustic/2021.01.13_BVAE-TTS.md) ICLR2021.
-[^22]: [**IAF**: Improved Variational Inference with Inverse Autoregressive Flow.](../_Basis/IAF.md) NeurIPS2016.
-[^23]: Variational Inference with Normalizing Flows. ICML2015.
-[^24]: Variational Lossy Autoencoder. ICLR2017.
-[^25]: Latent Normalizing Flows for Discrete Sequences. ICML2019.
-
 </td><td>
 
 变分自编码器 (VAEs) 是最常用的基于似然的深度生成模型之一.
@@ -246,9 +215,6 @@ Similar to our work, Ma et al. proposed a conditional VAE with normalizing flows
 However, the fact that our model can explicitly align a latent sequence with the source sequence differs from **FlowSeq**[^26], which needs to learn implicit alignment through attention mechanisms.
 Our model removes the burden of transforming the latent sequence into standard normal random variables by matching the latent sequence with the time-aligned source sequence via MAS, which allows for simpler architecture of normalizing flows.
 
-[^26]: **FlowSeq**: Non-Autoregressive Conditional Sequence Generation with Generative Flow. EMNLP-IJCNLP2019.
-
-
 </td><td>
 
 和我们的工作类似, Ma 等人提出了 **FlowSeq**[^26] 一个带有标准化流的条件变分自编码器, 用于非自回归神经机器翻译.
@@ -265,10 +231,6 @@ Autoregressive TTS models (**VoiceLoop**[^27]; **Tacotron2**[^01]; **Flowtron**[
 Parallel TTS models (**FastSpeech**[^05]; **ParaNet**[^06]; **Glow-TTS**[^09]; ****FastSpeech2s**[^15]), on the other hand, have been relied on deterministic duration prediction.
 It is because parallel models have to predict target phoneme duration or the total length of target speech in one feed-forward path, which makes it hard to capture the correlated joint distribution of speech rhythms.
 In this work, we suggest a flow-based stochastic duration predictor that learns the joint distribution of the estimated phoneme duration, resulting in the generation of diverse speech rhythms in parallel.
-
-[^27]: [**VoiceLoop**: Voice Fitting and Synthesis via a Phonological Loop.](../Acoustic/2017.07.20_VoiceLoop.md) ICLR2018.
-[^28]: [**Flowtron**: An Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis.](../Acoustic/2020.05.12_Flowtron.md) ICLR2021.
-[^29]: Generating Sequences with Recurrent Neural Networks. ArXiv2013.
 
 </td><td>
 
@@ -575,10 +537,6 @@ We apply the stop gradient operator (**VQ-VAE**[^32]), which prevents back-propa
 
 The sampling procedure is relatively simple; the phoneme duration is sampled from random noise through the inverse transformation of the stochastic duration predictor, and then it is converted to integers.
 
-[^30]: [**Flow++**: Improving Flow-Based Generative Models with Variational Dequantization and Architecture Design.](../Flow/2019.02.01_Flow++.md) ICML2019.
-[^31]: [**VFlow**: More Expressive Generative Flows with Variational Data Augmentation.](../Flow/VFlow.md) ICML2020.
-[^32]: [**VQ-VAE**: Neural Discrete Representation Learning.](../../Modules/VQ/2017.11.02_VQ-VAE.md) NeurIPS2017.
-
 </td><td>
 
 我们可以通过对估计的对齐的每一行中所有列求和以计算每个输入 Token $d_i$ 的时长, 即 $\sum_j A_{i,j}$.
@@ -624,9 +582,6 @@ $$
 where $T$ denotes the total number of layers in the discriminator and $D^l$ outputs the feature map of the $l$-th layer of the discriminator with $N_l$ number of features.
 
 Notably, the feature matching loss can be seen as reconstruction loss that is measured in the hidden layers of the discriminator suggested as an alternative to the element-wise reconstruction loss of VAEs ([^34]).
-
-[^33]: [**LSGAN**: Least Squares Generative Adversarial Networks.](../_Basis/2016.11.13_LSGAN.md) ICCV2017.
-[^34]: Autoencoding beyond Pixels Using a Learned Similarity Metric. ICML2016.
 
 </td><td>
 
@@ -701,8 +656,6 @@ For the multi-speaker case, we use global conditioning (**WaveNet**[^02]) in res
 
 The posterior encoder, consisting of 16 WaveNet residual blocks, takes linear-scale log magnitude spectrograms and produce latent variables with 192 channels.
 
-[^35]: [**WaveGlow**: A Flow-Based Generative Network for Speech Synthesis.](../Vocoder/2018.10.31_WaveGlow.md) ICASSP2019.
-
 </td><td>
 
 对于后验编码器, 我们采用 **WaveGlow**[^35] 和 **Glow-TTS**[^09] 中使用的非因果 WaveNet 残差块.
@@ -763,9 +716,6 @@ class PosteriorEncoder(nn.Module):
 The prior encoder consists of a text encoder that processes the input phonemes $c_{text}$ and a normalizing flow $f_{\theta}$ that improves the flexibility of the prior distribution.
 The text encoder is a **Transformer**[^36] encoder that uses **relative positional representation**[^37] instead of absolute positional encodin.
 We can obtain the hidden representation $h_{text}$ from $c_{text}$ through the text encoder and a linear projection layer above the text encoder that produces the mean and variance used for constructing the prior distribution.
-
-[^36]: [**Transformer**: Attention is All You Need.](../_Transformer/2017.06.12_Transformer.md) NeurIPS2017.
-[^37]: Self-Attention with Relative Position Representations. ACL2018.
 
 </td><td>
 
@@ -834,8 +784,6 @@ For the multi-speaker setting, we add speaker embedding to the residual blocks i
 
 The normalizing flow in the prior encoder is a stack of four affine coupling layers, each coupling layer consisting of four WaveNet residual blocks.
 As we restrict the affine coupling layers to be volume-preserving transformations, the coupling layers do not produce scale parameters.
-
-[^38]: Density estimation using Real NVP. ICLR2017.
 
 </td><td>
 
@@ -993,8 +941,6 @@ We also apply **Neural Spline Flows**[^39], which take the form of invertible no
 Neural spline flows improve transformation expressiveness with a similar number of parameters compared to commonly used affine coupling layers.
 For the multi-speaker setting, we add a linear layer that transforms speaker embedding and add it to the input $h_{text}$.
 
-[^39]: Neural Spline Flows. NeurIPS2019.
-
 </td><td>
 
 随机时长预测器从条件输入 $h_{text}$ 估计音素时长的分布.
@@ -1131,9 +1077,6 @@ The audio format is 16-bit PCM with a sample rate of 44 kHz.
 We reduced the sample rate to 22 kHz.
 We randomly split the dataset into a training set (43,470 samples), validation set (100 samples), and test set (500 samples).
 
-[^40]: [**LJSpeech**: The LJ Speech Dataset.](../../Datasets/2017.07.05_LJSpeech.md)
-[^41]: [**VCTK**: CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit.](../../Datasets/2012.08.00_VCTK.md)
-
 </td><td>
 
 我们在两个不同的数据集上进行了实验.
@@ -1160,8 +1103,6 @@ We use 80 bands mel-scale spectrograms for reconstruction loss, which is obtaine
 We use International Phonetic Alphabet (IPA) sequences as input to the prior encoder.
 We convert text sequences to IPA phoneme sequences using open-source software (**Phonemizer**[^42]), and the converted sequences are interspersed with a blank token following the implementation of **Glow-TTS**[^09].
 
-[^42]: **Phonemizer** [Github](https://github.com/bootphon/phonemizer) 2021.
-
 </td><td>
 
 我们使用线性频谱图, 它可以从原始波形通过短时傅里叶变换 (STFT) 获得.
@@ -1182,8 +1123,6 @@ Following previous work (**FastSpeech2s**[^15]; **EATS**[^16]), we adopt the win
 We randomly extract segments of latent representations with a window size of 32 to feed to the decoder instead of feeding entire latent representations and also extract the corresponding audio segments from the ground truth raw waveforms as training targets.
 We use mixed precision training on 4 NVIDIA V100 GPUs.
 The batch size is set to 64 per GPU and the model is trained up to 800k steps.
-
-[^43]: [**AdamW**: Decoupled Weight Decay Regularization.](../../Modules/Optimization/2017.11.14_AdamW.md) ICLR2019.
 
 </td><td>
 
@@ -1324,8 +1263,6 @@ For **Tacotron2**[^01], we broadcasted speaker embedding and concatenated it wit
 The evaluation method is the same as that described in Section 4.1.
 As shown in Table.03, our model achieves a higher MOS than the other models.
 
-[^44]: Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis. NeurIPS2018.
-
 </td><td>
 
 为了验证我们的模型可以学习和表示多样的语音特性, 我们将模型与 **Tacotron2**[^01] **Glow-TTS**[^09] 和 **HiFi-GAN**[^13] 进行了比较, 它们都具有扩展到多说话人语音合成能力 ([^44]; **Glow-TTS**[^09]; **HiFi-GAN**[^13]).
@@ -1371,8 +1308,6 @@ While **Glow-TTS**[^09] generates only fixed-length utterances due to the determ
 Figure.02b shows the lengths of 100 utterances generated with each of five speaker identities from our model in the multi-speaker setting, implying that the model learns the speaker-dependent phoneme duration.
 F0 contours of 10 utterances extracted with the **YIN algorithm**[^45] in Figure.03 shows that our model generates speech with diverse pitches and rhythms, and five samples generated with each of different speaker identities in Figure.03d demonstrates our model expresses very different lengths and pitches of speech for each speaker identity.
 Note that **Glow-TTS**[^09] could increase the diversity of pitch by increasing the standard deviation of the prior distribution, but on the contrary, it could lower the synthesis quality.
-
-[^45]: **YIN**: A Fundamental Frequency Estimator for Speech and Music. 2002.
 
 </td><td>
 
@@ -1444,3 +1379,51 @@ We will release our source-code and pre-trained models to facilitate research in
 我们将会发布我们的源代码和预训练模型, 以促进研究的广阔前景.
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^01]: [**Tacotron2**: Natural TTS Synthesis by Conditioning WaveNet on Mel Spectrogram Predictions.](../Acoustic/2017.12.16_Tacotron2.md) ICASSP2018.
+[^02]: [**WaveNet**: A Generative Model for Raw Audio.](../Vocoder/2016.09.12_WaveNet.md) ArXiv2016.
+[^03]: [**WaveRNN**: Efficient Neural Audio Synthesis.](../Vocoder/2018.02.23_WaveRNN.md) ICML2018.
+[^04]: [**TransformerTTS**: Neural Speech Synthesis With Transformer Network.](../Acoustic/2018.09.19_TransformerTTS.md) AAAI2019.
+[^05]: [**FastSpeech**: Fast, Robust and Controllable Text to Speech.](../Acoustic/2019.05.22_FastSpeech.md)
+[^06]: [**ParaNet**: Non-Autoregressive Neural Text-to-Speech.](../Acoustic/2019.05.21_ParaNet.md) ICML2020.
+[^07]: [**AlignTTS**: Efficient Feed-Forward Text-to-Speech System without Explicit Alignment.](../Acoustic/2020.03.04_AlignTTS.md) ICASSP2020.
+[^08]: [**Flow-TTS**: A Non-Autoregressive Network for Text to Speech Based on Flow.](../Acoustic/2020.04.09_Flow-TTS.md) ICASSP2020.
+[^09]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search.](../Acoustic/2020.05.22_Glow-TTS.md) NeurIPS2020.
+[^10]: [**GAN**: Generative Adversarial Nets.](../_Basis/2014.06.10_GAN.md) NeurIPS2014.
+[^11]: [**MelGAN**: MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis.](../Vocoder/2019.10.08_MelGAN.md) NeurIPS2019.
+[^12]: [**GAN-TTS**: High Fidelity Speech Synthesis with Adversarial Networks.](../Vocoder/2019.09.25_GAN-TTS.md) ICLR2019.
+[^13]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis.](../Vocoder/2020.10.12_HiFi-GAN.md) NeurIPS2020.
+[^14]: [**Wave-Tacotron**: Spectrogram-Free End-to-End Text-to-Speech Synthesis.](../_tmp/Wave-Tacotron.md) ArXiv2020.
+[^15]: [**FastSpeech2**: Fast and High-Quality End-to-End Text to Speech](../Acoustic/2020.06.08_FastSpeech2.md) ICLR2021.
+[^16]: [**EATS**: End-to-end Adversarial Text-to-Speech.](2020.06.05_EATS.md) ICLR2021.
+[^17]: [**VAE**: Auto-Encoding Variational Bayes.](../_Basis/VAE.md) ICLR2014.
+[^18]: [**DeepVoice3**: 2000-Speaker Neural Text-to-Speech.](../Acoustic/2017.10.20_DeepVoice3.md) ICLR2018.
+[^19]: [**GMVAE-Tacotron**: Hierarchical Generative Modeling for Controllable Speech Synthesis.](../Acoustic/2018.10.16_GMVAE-Tacotron.md) ICLR2019.
+[^20]: Learning Latent Representations for Style Control and Transfer in End-to-End Speech Synthesis. ICASSP2019.
+[^21]: [**BVAE-TTS**: Bidirectional Variational Inference for Non-Autoregressive Text-to-Speech.](../Acoustic/2021.01.13_BVAE-TTS.md) ICLR2021.
+[^22]: [**IAF**: Improved Variational Inference with Inverse Autoregressive Flow.](../_Basis/IAF.md) NeurIPS2016.
+[^23]: Variational Inference with Normalizing Flows. ICML2015.
+[^24]: Variational Lossy Autoencoder. ICLR2017.
+[^25]: Latent Normalizing Flows for Discrete Sequences. ICML2019.
+[^26]: **FlowSeq**: Non-Autoregressive Conditional Sequence Generation with Generative Flow. EMNLP-IJCNLP2019.
+[^27]: [**VoiceLoop**: Voice Fitting and Synthesis via a Phonological Loop.](../Acoustic/2017.07.20_VoiceLoop.md) ICLR2018.
+[^28]: [**Flowtron**: An Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis.](../Acoustic/2020.05.12_Flowtron.md) ICLR2021.
+[^29]: Generating Sequences with Recurrent Neural Networks. ArXiv2013.
+[^30]: [**Flow++**: Improving Flow-Based Generative Models with Variational Dequantization and Architecture Design.](../Flow/2019.02.01_Flow++.md) ICML2019.
+[^31]: [**VFlow**: More Expressive Generative Flows with Variational Data Augmentation.](../Flow/VFlow.md) ICML2020.
+[^32]: [**VQ-VAE**: Neural Discrete Representation Learning.](../../Modules/VQ/2017.11.02_VQ-VAE.md) NeurIPS2017.
+[^33]: [**LSGAN**: Least Squares Generative Adversarial Networks.](../_Basis/2016.11.13_LSGAN.md) ICCV2017.
+[^34]: Autoencoding beyond Pixels Using a Learned Similarity Metric. ICML2016.
+[^35]: [**WaveGlow**: A Flow-Based Generative Network for Speech Synthesis.](../Vocoder/2018.10.31_WaveGlow.md) ICASSP2019.
+[^36]: [**Transformer**: Attention is All You Need.](../_Transformer/2017.06.12_Transformer.md) NeurIPS2017.
+[^37]: Self-Attention with Relative Position Representations. ACL2018.
+[^38]: Density estimation using Real NVP. ICLR2017.
+[^39]: Neural Spline Flows. NeurIPS2019.
+[^40]: [**LJSpeech**: The LJ Speech Dataset.](../../Datasets/2017.07.05_LJSpeech.md)
+[^41]: [**VCTK**: CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit.](../../Datasets/2012.08.00_VCTK.md)
+[^42]: **Phonemizer** [Github](https://github.com/bootphon/phonemizer) 2021.
+[^43]: [**AdamW**: Decoupled Weight Decay Regularization.](../../Modules/Optimization/2017.11.14_AdamW.md) ICLR2019.
+[^44]: Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis. NeurIPS2018.
+[^45]: **YIN**: A Fundamental Frequency Estimator for Speech and Music. 2002.
